@@ -18,7 +18,6 @@ if (isset($_POST['supprimer_message'])) {
 	}
 }
 
-
 // ----- Affichage des messages -----
 $today=mktime(0,0,0,date("m"),date("d"),date("Y"));
 $now=time();
@@ -109,6 +108,14 @@ $sql="SELECT id, texte, date_debut, date_fin, date_decompte, auteur, statuts_des
 
 // pour accueil_simpl_prof.php
 if (basename($_SERVER['SCRIPT_NAME'])=="accueil_simpl_prof.php") {
+	if($gepiVersion!="master") {
+		$gepiVersionConnue=getPref($_SESSION['login'], 'gepiVersionConnue', '');
+		if($gepiVersionConnue!=$gepiVersion) {
+			$message_nouvelle_version_gepi=afficher_message_nouvelle_version_gepi();
+			echo "<div class='postit' title=\"Votre Gepi a été mis à jour.\">".$message_nouvelle_version_gepi."</div>";
+		}
+	}
+
 	if($affiche_messages == 'yes') {
 		echo "<table id='messagerie' summary=\"Ce tableau contient les informations sur lesquelles on souhaite attirer l'attention\">\n";
 		if((isset($liste_evenements))&&($liste_evenements!="")) {
